--- a/MSD-S2/pom.xml
+++ b/MSD-S2/pom.xml
@@ -23,7 +23,8 @@
 		<maven.compiler.source>1.8</maven.compiler.source>		
 		
 		<!-- <jdk.system.path>C:\Program Files\Java\jdk1.8.0_31</jdk.system.path> -->
-		<jdk.system.path>${env.JAVA_HOME}</jdk.system.path>		
+		<jdk.system.path>C:/Program Files/Java/jdk1.8.0_152</jdk.system.path>	
+		<!-- ${env.JAVA_HOME} -->	
 	</properties>
 
 	<dependencyManagement>
